--- a/ref.bib
+++ b/ref.bib
@@ -1588,3 +1588,39 @@ title = {A Secure Environment for Untrusted Helper Applications (Confining the W
   organization={ACM}
 }
 
+@misc{diffserv,
+  title = {{An Architecture for Differentiated Services}},
+  author = {{S. Blake and D. Black and M. Carlson and E. Davies and Z. Wang and W. Weiss}},
+  howpublished = {{RFC 2475}},
+  year = {1998}
+}
+
+@article{fifoplus,
+ author = {Clark, David D. and Shenker, Scott and Zhang, Lixia},
+ title = {{Supporting Real-time Applications in an Integrated Services Packet Network: Architecture and Mechanism}},
+ journal = {ACM SIGCOMM Computer Communication Review},
+ year = {1992},
+} 
+
+@article{virtualClocks,
+ author = {Zhang, L.},
+ title = {{Virtual Clock: A New Traffic Control Algorithm for Packet Switching Networks}},
+ journal = {ACM SIGCOMM Computer Communication Review},
+ year = {1990},
+} 
+
+@article{csfq,
+ author = {Stoica, Ion and Shenker, Scott and Zhang, Hui},
+ title = {{Core-stateless Fair Queueing: A Scalable Architecture to Approximate Fair Bandwidth Allocations in High-speed Networks}},
+ journal = {IEEE/ACM Trans. Netw.},
+ year = {2003},
+} 
+
+@article{drr,
+ author = {Shreedhar, M. and Varghese, George},
+ title = {{Efficient Fair Queueing Using Deficit Round Robin}},
+ journal = {ACM SIGCOMM Computer Communication Review},
+ year = {1995},
+} 
+
+
