--- a/design.tex
+++ b/design.tex
@@ -71,9 +71,7 @@ acknowledgements, which prior work has shown to have limited accuracy~\cite{pack
 It would also be difficult to compute a useful estimate of a single RTT representing the entire bundle as each 
 flow may experience different sources of latency after traversing the shared bottleneck. We are fundamentally
 limited in the accuracy of measurements we can obtain by only observing one side of the bottleneck.
-Thus, to obtain more robust and useful measurements, \name actually uses a pair of middleboxes, both
-on the network path: one before the bottleneck, and one after, which we refer to as the \textit{\inbox}
-and \textit{\outbox}, respectively.
+
 
 By rate limiting flows in a bundle, we can shift the bottleneck from an intermediate router
 to \name itself, and thus allow the queues to build at the inbox. This provides the opportunity
@@ -94,7 +92,17 @@ must
 
 \subsection{Two-sided Measurement}\label{s:design:twosided}
 \fc{lock}
-In order to perform congestion control, \name needs to collect and maintain measurements about the current state of the network. Traditionally, end-host congestion control has been tightly integrated with end-host packet transmission logic.
+In order to perform congestion control, \name needs to collect and maintain measurements about the current state of the network.
+Traditionally, end-host congestion control has been tightly integrated with end-host packet transmission logic. Therefore, algorithms have been built on those measurements that are readily available on end-hosts, such as the number of in-order packets acknowledged by the receiver, the number of duplicate acknowledgements (as a proxy for loss), the rate at which they send, and the round-trip time.
+
+However, recent algorithms observe~\cite{bbr, sprout, remy, nimbus} that it is often useful to incorporate the receiver's view of a connection's rate as well. These proposals estimate the received rate at the sender using the timing between received acknowledgements, but tracking acknowledgements requires maintaining per-connection state, which is contrary to our design goal of scalability, and depends upon path symmetry. Further, sender-side measurements of the bottleneck rate have long been known to have limited accuracy compared to the those taken at the receiver~\cite{packet-dynamics, path-properties}.
+
+In addition, it is not clear how one could come up with a useful ``round-trip time'' in this scenario, as each flow in a given bundle may experience different sources of latency after traversing the shared bottleneck, and thus experience different end-to-end RTTs. 
+
+To address all of these challenges, \name actually uses a pair of middleboxes, both
+on the network path: one before the bottleneck, and one after, which we refer to as the \textit{\inbox}
+and \textit{\outbox}, respectively. The \inbox is responsible for performing congestion control (and enforcing congestion control decisions) and gathering sender-side measurements, while the \outbox is responsible for performing measurements on traffic destined for receivers that flows through it.
+
 \cut{
 \begin{outline}
 \1 Traditionally, end-host congestion control has been tightly integrated with end-host packet transmission logic.
@@ -114,26 +122,6 @@ In order to perform congestion control, \name needs to collect and maintain meas
     \2 The \outbox is responsible for performing measurements on traffic destined for receivers that flows through it.
     \2 One consideration is how to ensure that traffic between the senders and receivers indeed flows through the in-box and out-box, with the prevalence of SDN, something like way-point routing~\cite{waypoint-routing, flowtags} can be used. 
     \2 Also network verification~\cite{veriflow, anteater, reachability} to ensure that traffic indeed traverses in- and out- boxes.
-\end{outline}
-}
-
-\subsection{What About TCP Proxies?}\label{s:design:prior}
-\fc{lock}
-\fc{Maybe this belongs in related work instead?}
-\cut{
-\begin{outline}
-\1 An existing approach which could fulfill these design objectives is a TCP Proxy.
-    \2 TCP proxies are popular in cellular networks
-    \2 They are usually used to shorten the observed round-trip time of a connection, so it can quickly ramp up its sending rate.
-    \2 They do this by sending acknowledgements to the sender.  
-        \3 This means they must take responsibility for reliable delivery.
-    \2 Because TCP proxies take responsibility for reliability, they must implement full TCP stacks.
-        \3 As a result, they are difficult to implement in hardware and difficult to scale. \an{maybe mention this later, once it's more clear our design is hardware-compatible?}
-    \2 They furthermore remain limited by one-sided measurements.
-    \2 They do not allow fate-sharing:
-        \3 If a TCP proxy fails, as middleboxes often do~\cite{aplomb}, the underlying connection is broken.
-\1 We describe in \S\ref{s:measurement} how a \name can perform precise congestion control measurements without implementing a TCP proxy
-    \2 and how to perform these measurements in a fault-tolerant way that preserves fate-sharing.
 \end{outline}
 }
 
