--- a/intro.tex
+++ b/intro.tex
@@ -70,7 +70,12 @@ The rest of this paper is organized as follows:
 \radhika{Alternate intro: mostly just changed the flow of certain points above /*}
 
 %lots of scheduling algorithms proposed. scheduling used in private wans. seems clearly beneficial.
-The existence of a vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, sfqCoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the benefits of deploying such policies within the network. Unfortunately, public Internet has proven difficult to evolve. Although router vendors have, over the years, implemented certain scheduling and queue management algorithms (such as fair queueing~\cite{fair-queueing}\radhika{might be better to cite deficit round robin. need to couble check}), operators often do not enable these features. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, sfqCoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such policies within the network. Unfortunately, the public Internet has proven difficult to evolve. Although router vendors have, over the years, implemented certain scheduling and queue management algorithms (such as fair queueing~\cite{fair-queueing}\radhika{might be better to cite deficit round robin. need to double check}), operators often do not enable these features. Meanwhile, in privately operated wide-area networks, operators have used scheduling in the core to reap significant gains~\cite{b4, bwe, swan}. 
+
+Why, then, are public WAN operators hesitant to deploy scheduling and queue management policies? First, such policies can be difficult to configure, and poor configurations can cause significant performance degradation~\cite{nanog-discussion}.
+Second, the position of operators in the public Internet is a challenging one, as each of their various customers may desire diverging \radhika{different?} (and often incompatible) features. For example, due to the prevalence of VPN tunnelling, enabling fair queueing in routers may penalize flows bundled within a single VPN tunnel.
+Thus, operators cannot see the full picture, and cannot offer scheduling that will appease all customers. 
+As a result, even the emergence of programmable scheduling~\cite{pifo} might not be a panacea; while it might make it simpler to implement different scheduling policies, enforcing them in the public Internet would continue to be a significant 
 %On the other hand, even simple policies, such as priority scheduling across a small number of traffic classes, deployed within privately operated wide-area networks, have been shown to provide significant gains in performance~\cite{b4, swan, bwe} \radhika{can we also show some results with priority scheduling in eval?}.  
 %, and the deployment of simple scheduling policies in privately ~\cite{b4, bwe, swan} clearly indicates the benefits of 
 
