--- a/related.tex
+++ b/related.tex
@@ -19,5 +19,6 @@
 \1 We describe in \S\ref{s:measurement} how a \name can perform precise congestion control measurements without implementing a TCP proxy
     \2 and how to perform these measurements in a fault-tolerant way that preserves fate-sharing.
     \end{outline}
+    \item some related work on creating bottleneck that Akshay had mentioned earlier. 
     \item anything else?
 \end{itemize}
