elastic cross traffic graph

--- a/ref.bib
+++ b/ref.bib
@@ -842,7 +842,7 @@ url = {https://www.usenix.org/conference/nsdi14/technical-sessions/presentation/
 } 
 
 @inproceedings{bwe,
-title	= {BwE: Flexible, Hierarchical Bandwidth Allocation for WAN Distributed Computing},
+title	= {{BwE: Flexible, Hierarchical Bandwidth Allocation for WAN Distributed Computing}},
 author	= {Alok Kumar and Sushant Jain and Uday Naik and Nikhil Kasinadhuni and Enrique Cauich Zermeno and C. Stephen Gunn and Jing Ai and Björn Carlin and Mihai Amarandei-Stavila and Mathieu Robin and Aspi Siganporia and Stephen Stuart and Amin Vahdat},
 year	= {2015},
 booktitle	= {SIGCOMM}
