--- a/graphs/elastic-cross.Rnw
+++ b/graphs/elastic-cross.Rnw
@@ -1,6 +1,7 @@
 \begin{figure}
     \centering
-    <<robust:cr-elastic,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2.5>>=
+    \begin{subfigure}[b]{0.5\textwidth}
+    <<robust:cr-elastic:a,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2.5>>=
 library(ggplot2)
 df <- read.csv("cr-elastic.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
@@ -24,6 +25,36 @@ ggplot(df, aes(x=Duration, linetype=Alg)) +
         legend.text=element_text(size=12)
     )
 @
+    \caption{Congestion controllers from \S\ref{s:eval}.}\label{fig:robust:cr-elastic:a}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.5\textwidth}
+    <<robust:cr-elastic:b,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2.5>>=
+library(ggplot2)
+df <- read.csv("cr-elastic.data", sep=" ")
+df$Duration <- df$Duration.usec. / 1e6
+
+ggplot(df, aes(x=Duration, linetype=Alg)) +
+    stat_ecdf() +
+    scale_x_log10(
+        limits=c(0.05, 5),
+        breaks=c(0.05, 0.1, 0.15, 0.2, 0.25, 0.5, 0.75, 1, 2, 5, 10),
+        name="Duration (sec)") +
+    scale_linetype_manual(
+        limit=c("copa_sfq", "nimcopa_sfq", "nobundler_fifo"),
+        labels=c("copa_sfq" = "Copa (Standard) ", "nimcopa_sfq" = "Copa (Nimbus) ", "nobundler_fifo" = "Baseline"),
+        values=c("copa_sfq" = "dotted", "nimcopa_sfq" = "solid", "nobundler_fifo" = "twodash")
+    ) +
+    ylab("CDF") +
+    theme_minimal() +
+    theme(
+        legend.position="top",
+        legend.title=element_blank(),
+        legend.text=element_text(size=12)
+    )
+@
+    \caption{Alternate configuration -- Copa uses Nimbus's elasticity detector.}\label{fig:robust:cr-elastic:b}
+    \end{subfigure}
+
     \caption{Elastic cross traffic.}
     \label{fig:robust:cr-elastic}
 \end{figure}
